@@ -2636,23 +2636,43 @@ public void test078() {
 // TODO: Enable after Bug 552769 is fixed
 public void test079() {
 
-	String problemLog = (this.complianceLevel >= ClassFileConstants.JDK24) ?
+	String problemLog = (this.complianceLevel >= ClassFileConstants.JDK25) ?
 			"""
 			----------
 			1. ERROR in X.java (at line 1)
 				void ___eval() {
 				^
-			Implicitly Declared Classes and Instance Main Methods is a preview feature and disabled by default. Use --enable-preview to enable
-			----------
-			2. ERROR in X.java (at line 1)
-				void ___eval() {
-				^
 			Implicitly declared class must have a candidate main method
 			----------
-			3. ERROR in X.java (at line 4)
+			2. ERROR in X.java (at line 2)
+				new Runnable() {
+				    ^^^^^^^^
+			Runnable cannot be resolved to a type
+			----------
+			3. ERROR in X.java (at line 3)
+				int ___run() throws Throwable {
+				                    ^^^^^^^^^
+			Throwable cannot be resolved to a type
+			----------
+			4. ERROR in X.java (at line 4)
 				return blah;
 				       ^^^^
 			blah cannot be resolved to a variable
+			----------
+			5. ERROR in X.java (at line 6)
+				private String blarg;
+				        ^^^^^^
+			String cannot be resolved to a type
+			----------
+			6. ERROR in X.java (at line 13)
+				private String blah;
+				        ^^^^^^
+			String cannot be resolved to a type
+			----------
+			7. ERROR in X.java (at line 14)
+				public static void main(String[] args) {
+				                        ^^^^^^
+			String cannot be resolved to a type
 			----------
 			""" :
 			"""
@@ -2660,7 +2680,7 @@ public void test079() {
 			1. ERROR in X.java (at line 1)
 				void ___eval() {
 				^
-			The preview feature Implicitly Declared Classes and Instance Main Methods is only available with source level 24 and above
+			The Java feature 'Compact Source Files and Instance Main Methods' is only available with source level 25 and above
 			----------
 			2. ERROR in X.java (at line 1)
 				void ___eval() {
